1.0.3
Updated compatability to Java 8. (Apparently I missed a few things?)